# discord_replication

./: .env-dist  Cargo.toml  README.md  docker-compose.yml
migrations/2024-03-14-095519_replication_pairs_init/: down.sql  up.sql
migrations/2024-03-14-095548_new_chan_replication_init/: down.sql  up.sql
migrations/2024-03-20-071542_replication_pairs_struct_update/: down.sql  up.sql
migrations/2024-03-20-072840_replication_thread_pairs_init/: down.sql  up.sql
src/: database.rs  errors.rs  handler.rs  log.rs  main.rs  schema.rs
src/handler/: commands.rs  db_access.rs  handlers.rs  hooks.rs  owner.rs
