[package]
name = "discord_replication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15.0" }
openssl = { version = "*" }
serenity = { version = "0.12.1" }
tokio = { version = "1.36.0", features = ["full"]}
log = { version = "0.4.21", features = [] }
pretty_env_logger = "0.5.0"
diesel = { version = "2.1.4", features = ["default", "chrono", "r2d2", "postgres"] }
